<resources>
    <string name="app_name">魅力宜昌</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    
    
    <string name="news_yc">宜昌资讯</string>
    <string name="tour_yc">宜昌旅游</string>
    <string name="video_yc">宜昌风采</string>
    <string name="info_yc">美景美言</string>

    <string name="version">版本</string>
    <string name="about_us">关于</string>
    <string name="setting">设置</string>

    <string name="hot_news">热门</string>
    <string name="new_news">最新</string>
    <string name="recommand_news">推荐</string>

    <string name="tour_info">景点介绍</string>
    <string name="tour_tip">特别提示</string>
    <string name="tour_morePic">更多图片</string>
    <string name="tour_look">查看</string>

    <string name="play_time">00:00:00</string>


    <string name="pull_to_refresh_top_pull">下拉刷新</string>
    <string name="pull_to_refresh_top_release">释放刷新</string>
    <string name="pull_to_refresh_top_refreshing">加载中...</string>
    <string name="pull_to_refresh_bottom_pull">继续拖动</string>
    <string name="pull_to_refresh_bottom_release">放开装载更多</string>
    <string name="pull_to_refresh_bottom_refreshing">正在装载数据..</string>
    <string name="pull_to_refresh_no_data">没有更多数据</string>
    
    
    <string name="nothing_for_feed">没有任何动态~O__O"…</string>
    <string name="default_introduce">暂无介绍</string>




<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tour_detail">TourDetailActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_register_phone">使用手机号码注册</string>
    <string name="title_activity_register_code">填写验证码</string>
    <string name="title_activity_register_final">完成注册</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_publish">PublishActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>








</resources>
